# dpdump2tab

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
src/: dpdump2eqn.py  dpdump2tab.py
src/dpdump2eqn/: __init__.py  frontend.py  infile_utilities.py
src/dpdump2tab/: __init__.py  frontend.py  ttable_tools.py
tests/: conftest.py  test_ttable_tools.py
