[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dpdump2eqn"
version = "0.0.1"
description = "Convert dumps made with dpdumper into logic equations"
authors = [
   { name = "Fabio Battaglia", email = "hkzlabnet@gmail.com" }
]
keywords = ["dupico", "DuPAL", "dumping"]
readme = "README.md"
license = { text = "CC BY-SA 4.0 DEED" }
classifiers = [
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.12"
dependencies = [
    "dpdumperlib >= 0.0.2",
    "logicmin >= 0.4.0"
]

[project.scripts]
dpdumper = "dpdump2eqn.frontend:cli"

[tool.setuptools.packages.find]
where = ["src", "."]  # list of folders that contain the packages (["."] by default)
include = ["dpdump2eqn*"]
exclude = ["test*"]

[project.urls]
repository = "https://github.com/DuPAL-PAL-DUmper/dpdump2eqn"