[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dpdump2tab"
version = "0.0.2"
description = "Convert dumps made with dpdumper into truth tables compatible with espresso"
authors = [
   { name = "Fabio Battaglia", email = "hkzlabnet@gmail.com" }
]
keywords = ["dupico", "DuPAL", "dumping"]
readme = "README.md"
license = { text = "CC BY-SA 4.0 DEED" }
classifiers = [
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.12"
dependencies = [
    "dpdumperlib >= 0.0.3"
]

[project.scripts]
dpdump2tab = "dpdump2tab.frontend:cli"

[tool.setuptools.packages.find]
where = ["src", "."]  # list of folders that contain the packages (["."] by default)
include = ["dpdump2tab*"]
exclude = ["test*"]

[project.urls]
repository = "https://github.com/DuPAL-PAL-DUmper/dpdump2tab"